# ml-madness

./: .gitignore  app.py  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-historical-data-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backtest/: ensemble_results.json  results.json
data/seeds/: bracket_manual.csv  team_aliases.csv
models/: ensemble.joblib  evaluation_results.json  lgb_params.json  logistic_baseline.joblib  selected.json  vif_report.json  xgb_params.json
src/: eligibility.py
src/backtest/: backtest.py  scoring.py  validate.py
src/dashboard/: compare.py  plots.py
src/ingest/: cbbdata_client.py  fetch_bracket.py  fetch_historical_ratings.py  kaggle_download.py  parse_regular_season.py  parse_tourney.py  write_parquet.py
src/models/: ensemble.py  evaluate.py  features.py  temporal_cv.py  train_lightgbm.py  train_logistic.py  train_xgboost.py  vif_analysis.py
src/normalize/: build_team_table.py  fuzzy_match.py
src/simulator/: bracket_schema.py  score_predictor.py  simulate.py  validate.py
src/ui/: advancement_table.py  bracket_layout.py  bracket_svg.py  data_loader.py  override_controls.py
src/utils/: cutoff_dates.py  query_helpers.py  seasons.py
tests/: conftest.py  test_features.py  test_override_pipeline.py  test_smoke_e2e.py  test_vif.py
(+87 files in other folders)
