[project]
name = "madness2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "kaggle>=2.0.0",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "optuna>=4.7.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "python-levenshtein>=0.27.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "thefuzz>=0.22.1",
]
